welcome.lessons.welcome.array.notriples.NoTriples.scala.error
noTriples:6: error: not found: value numd
    if (nums(i)==nums(i+1) && nums(i+1)==numd(i+2)){
                                         ^noTriples:11: error: type mismatch;
 found   : Unit
 required: Boolean
  if (cpt ==0){
  ^